--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link href="./style.css" rel="stylesheet">
   </head>
   <body>
+
+    <div class="calculator">
+      <div class="display">
+        00
+      </div>
+      <div class="buttons">
+        <div class="actions">
+          <button id="clear">Clear</button>
+          <button id="total">=</button>
+        </div>
+        <div class="container"> 
+          <div class="numbers">
+            <button class="num n1">1</button>
+            <button class="num n2">2</button>
+            <button class="num n3">3</button>
+            <button class="num n4">4</button>
+            <button class="num n5">5</button>
+            <button class="num n6">6</button>
+            <button class="num n7">7</button>
+            <button class="num n8">8</button>
+            <button class="num n9">9</button>
+            <button class="num n0">0</button>
+          </div>
+          <div class="operators">
+            <button class="operator" id="add">+</button>
+            <button class="operator" id="subtract">-</button>
+            <button class="operator" id="multiply">x</button>
+            <button class="operator" id="divide">/</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./script.js">
     </script>
   </body>
